--- a/static/crydex.css
+++ b/static/crydex.css
@@ -13,7 +13,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 61px;
   background-color: #f5f5f5;
   overflow-x: auto;
   white-space: nowrap;
@@ -52,6 +52,14 @@ body {
   background-color: #C8C6C5;
 }
 
+
+.cry-icon {
+  position: absolute;
+}
+
+.cry-icon:hover {
+  cursor: pointer;
+}
 
 #graph-title {
   margin: auto;
